# penguin

./: .dockerignore  .env.sample  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  build.gradle  compose.yaml  package.json  settings.gradle  tsconfig.json
.github/workflows/: build-release.yml  docker-image.yml  docker.yml  pull-request.yml
.planned-to-delete/: dixebus.ts
migrations/: 20251214114530_initial.up.sql
scripts/: delete-commands.ts
src/: bot.ts  commands.rs  dev.ts  lib.rs  main.rs  main.ts  penguin.ts  penguinConstants.ts  settings.ts
src/commands/: fun.rs  mod.rs  music.rs  utilities.rs
src/commands/admin/: pingCommand.ts  purgeCommand.ts  sayCommand.ts
src/commands/crypto/: coinCommand.ts
src/commands/economy/: balanceCommand.ts
src/commands/game/: chanleCommand.ts  taixiuCommand.ts
src/commands/games/: mod.rs
src/commands/misc/: avatarCommand.ts  chanleCommand.ts  evenOddCommand.ts  musicCommand.ts  osuCommand.ts  (+2 more)
src/common/: cryptoHelper.ts  facebookPost.ts
src/database/: mod.rs  postgres.rs
src/db/: dbClient.ts
src/economy/: economy.ts
src/entities/: User.ts
src/events/: botListeners.ts  messageListeners.ts  voiceListeners.ts
src/fixes/: embed.rs
src/guards/: balance.ts  rideTheBus.ts
src/interaction-handlers/: QueueButton.ts  queueButton.ts
src/listeners/: interactionListeners.ts  messageListeners.ts
src/models/: user.rs
src/util/: arrayUtils.ts  messageUtils.ts  musicUtils.ts  osUtils.ts  timeUtils.ts
src/utilities/: db.ts  discord.ts  emoji.ts  rng.ts  url.ts
src/utils/: mod.rs  os.rs  url.rs
(+99 files in other folders)
