[package]
name = "penguin"
version = "1.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
dotenvy = "0.15"
eyre = "0.6"
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "current" }
rand = "0.9"
regex = "1.12"
regex-lite = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "derive", "macros", "migrate", "chrono", "json" ] }
sysinfo = "0.37"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = "0.3"
url = "2.5"

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
